@@ -103,6 +103,11 @@ ASFLAGS += -DASSEMBLER
 # Dependency generation
 #
 
+# Don't build and include dependency files if they're not needed.
+ifeq ($(strip $(filter-out %clean, $(MAKECMDGOALS))),)
+no_deps = t
+endif
+
 # Include dependency files
 ifneq ($(no_deps),t)
 
